# MH_Change

./: .gitignore  FGW_distance.py  README.md  coha_build.py  fgw_build_linkage.py  fgw_colors.py  fgw_correspondence.py  fgw_sankey.py  fgw_sankey_diagram.py  fgw_subsample_diagnostic.py  fgw_tanglegram.py  final_layer_embeddings.py  insan_results.csv  main.py  pyproject.toml  requirements.txt  run_all_decades.sh  run_embedding_and_distance.sh  run_pipeline_from_csv.py  subsample_diagnostic.csv  token_count_sweep.py  token_counts.csv
diagnostics/: FGW_PCA_distance.py  README.md  bridge_diagnostic.py  check_nltk.py  search_terms.csv  token_count_sweep.py
old code/: sample_code.py
