[project]
name = "mh-change"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.39.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pot>=0.9.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.14.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "umap-learn>=0.5.6",
]
