[project]
name = "mh-change"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "click==8.4.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "contourpy==1.3.3",
    "cuda-bindings==13.3.1 ; sys_platform == 'linux'",
    "cuda-pathfinder==1.5.5 ; sys_platform == 'linux'",
    "cuda-toolkit==13.0.2 ; sys_platform == 'linux'",
    "cycler==0.12.1",
    "filelock==3.29.4",
    "fonttools==4.63.0",
    "fsspec==2026.6.0",
    "h11==0.16.0",
    "hf-xet==1.5.1 ; platform_machine == 'AMD64' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.20.1",
    "idna==3.18",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "llvmlite==0.47.0",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "matplotlib==3.11.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numba==0.65.1",
    "numpy==2.4.6",
    "nvidia-cublas==13.1.1.3 ; sys_platform == 'linux'",
    "nvidia-cuda-cupti==13.0.85 ; sys_platform == 'linux'",
    "nvidia-cuda-nvrtc==13.0.88 ; sys_platform == 'linux'",
    "nvidia-cuda-runtime==13.0.96 ; sys_platform == 'linux'",
    "nvidia-cudnn-cu13==9.20.0.48 ; sys_platform == 'linux'",
    "nvidia-cufft==12.0.0.61 ; sys_platform == 'linux'",
    "nvidia-cufile==1.15.1.6 ; sys_platform == 'linux'",
    "nvidia-curand==10.4.0.35 ; sys_platform == 'linux'",
    "nvidia-cusolver==12.0.4.66 ; sys_platform == 'linux'",
    "nvidia-cusparse==12.6.3.3 ; sys_platform == 'linux'",
    "nvidia-cusparselt-cu13==0.8.1 ; sys_platform == 'linux'",
    "nvidia-nccl-cu13==2.29.7 ; sys_platform == 'linux'",
    "nvidia-nvjitlink==13.0.88 ; sys_platform == 'linux'",
    "nvidia-nvshmem-cu13==3.4.5 ; sys_platform == 'linux'",
    "nvidia-nvtx==13.0.85 ; sys_platform == 'linux'",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "plotly==6.8.0",
    "pot==0.9.6.post1",
    "pygments==2.20.0",
    "pynndescent==0.6.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.12.1",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "triton==3.7.1 ; sys_platform == 'linux'",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "tzdata==2026.2 ; sys_platform == 'emscripten' or sys_platform == 'win32'",
    "umap-learn==0.5.12",
]
